<resources>
    <string name="app_name">Monitorizare Activitati Personale</string>
    <string name="start_aplicatie">Start Aplicatie</string>
    <string name="logo">Logo</string>
    <string name="setari">Setari</string>
    <string name="titleSetari">Pagina de Setari</string>
    <string name="titleMonitorizare">Gestionare date MAP</string>
    <string name="titleAdaugare">Adaugare date MAP</string>
    <string name="titleArhivare">Arhivare date MAP</string>
    <string name="titleImagini">Generare Imagini date MAP</string>
    <string name="imagine_map">Grafica CHART</string>
    <string name="adaugare_map">Adaugare MAP</string>
    <string name="preluare_json">Preluare JSON</string>
    <string name="vizualizare_map">Vizualizare MAP</string>
    <string name="generare_imagine">Generare Imagine</string>
    <string name="titleVizualizare">Vizualizare MAP</string>
    <string name="data_adaugarii">Data adaugarii</string>
    <string name="numar_kg">Numar KG</string>
    <string name="numar_ore_sport">Numar Ore Sport</string>
    <string name="numar_ore_odihna">Numar Ore Odihna</string>
    <string name="numar_calorii_consumate">Numar Calorii Consumate</string>
    <string name="info_adaugare">ADAUGARE DATE</string>
    <string name="nr_kg">Kilograme</string>
    <string name="coeficient_date">Coeficient Date</string>
    <string name="adaugare_valori_map">Adaugare Valori MAP</string>
    <string name="salveaza_kg">Salveaza KG</string>
    <string name="setari_text">Setari Aplicatie</string>
    <string name="switch_text">NU</string>
    <string name="salvati_kg">Salvati KG?</string>
    <string name="salvati_numar_ore_sport">Salvati Numar Ore Sport?</string>
    <string name="salvati_numar_ore_odihna">Salvati Numar Ore Odihna?</string>
    <string name="salvati_numar_calorii">Salvati Numar Calorii</string>
    <string name="salveaza_setari">Salveaza Setari</string>
    <string name="reseteaza_setari">Reseteaza Setari</string>
    <string name="vizualizare_setari">Afisare Setari</string>


    <string name="shared_preferences">shared_preferences</string>
    <string name="salveaza_kilograme">salveaza_kilograme</string>
    <string name="salveaza_sport">salveaza_sport</string>
    <string name="salveaza_odihna">salveaza_odihna</string>
    <string name="salveaza_calorii">salveaza_calorii</string>
    <string name="id_info">ID Info</string>
    <string name="kilograme">Afisare Kilograme</string>
    <string name="kilograme_info">Kilograme Info</string>
    <string name="sport">Afisare Sport</string>
    <string name="sport_info">Sport Info</string>
    <string name="odihna">Afisare Odihna</string>
    <string name="calorii">Afisare Calorii</string>
    <string name="coeficient">Afisare Coeficient</string>
    <string name="data">Afisare Data</string>
    <string name="data_info">Data Info</string>
    <string name="odihna_info">Odihna Info</string>
    <string name="calorii_info">Calorii Info</string>
    <string name="coeficient_info">Coeficient Info</string>
    <string name="editeaza_inregistrare">Salveaza Inregistrare</string>
    <string name="sterge_inregistrare">Sterge Inregistrare</string>
    <string name="editare_activitate">Editare Activitate</string>
    <string name="data_editare"></string>
    <string name="raspuns_update_inregistrare">A fost actualizata inregistrarea!</string>
    <string name="valoare_buton_editeaza">Editeaza Inregistrarea</string>
    <string name="titluJson">Preluare Valori JSON</string>

    <!-- STRINGS pentru lucrul cu baza de date -->
    <string name="DATABASE_NAME">map.db</string>
    <string name="TABLE_NAME">map_data</string>
    <string name="TABLE_COLUMN_ID">id</string>
    <string name="TABLE_COLUMN_DATA">data_adaugarii</string>
    <string name="TABLE_COLUMN_KG">kg</string>
    <string name="mesaj_arhivare">Mesaj Arhivare</string>


    <string name="avertizare_numar_minim_kg">Numarul de kilograme nu poate fi mai mic de 50</string>
    <string name="informare_preluare_valori">Au fost preluate valorile introduse ieri! Actualizarea se va face automat</string>

    <!-- STRINGS pentru preferences -->
    <string name="preferences_kilograme">numar_kilograme</string>
    <string name="preferences_sport">numar_ore_sport</string>
    <string name="preferences_setari_salvate">Setarile au fost salvate</string>
    <string name="set_mesaj_text_DA">DA</string>
    <string name="set_mesaj_text_NU">NU</string>
    <string name="preferences_numar_kilograme_text">NU</string>
    <string name="imagine_text_top">Valori Kilograme Inregistrari</string>
    <string name="imagine_column_id">ID Inregistrare</string>
    <string name="imagine_column_kg">Valoare Kilograme</string>







</resources>
